Fixed book button alignment in small screens

--- a/client/app/components/row/row.component.css
+++ b/client/app/components/row/row.component.css
@@ -48,15 +48,8 @@
 }
 
 .hotel-section .book-hotel {
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center !important;
 }
 
 @media screen and (max-width: 39.9375em) {
